update GET and add POST