@@ -6,10 +6,7 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import io.javalin.http.Context;
 import io.javalin.http.HttpStatus;
 
-import java.io.BufferedReader;
-import java.io.FileReader;
-import java.io.IOException;
-import java.io.Reader;
+import java.io.*;
 import java.nio.charset.StandardCharsets;
 import java.util.Comparator;
 import java.util.List;
@@ -41,6 +38,7 @@ public class AirplaneController {
         List<AvionJSON> list;
 
         String constructor = ctx.queryParam("constructor");
+        String paramCapacity = ctx.queryParam("capacity");
         List<String> sorts = ctx.queryParams("sort");
 
         // fetch data
@@ -50,7 +48,19 @@ public class AirplaneController {
             list = readAvions(JSON_FILEPATH)
                     .stream()
                     .filter(a -> constructor.equalsIgnoreCase(a.constructor))
-                    .collect(Collectors.toList());
+                    .toList();
+        }
+
+        if(paramCapacity != null) {
+            boolean less = paramCapacity.startsWith("-");
+            paramCapacity = less ? paramCapacity.substring(1) : paramCapacity;
+            int capacity = Integer.parseInt(paramCapacity);
+
+            if(less) {
+                list = list.stream().filter(a -> a.maxCapacity < capacity).toList();
+            } else {
+                list = list.stream().filter(a -> a.maxCapacity > capacity).toList();
+            }
         }
 
         // SORT
@@ -90,4 +100,53 @@ public class AirplaneController {
         ctx.json(list);
     }
 
+    public static void postAvion(Context ctx) {
+        ObjectMapper mapper = new ObjectMapper();
+
+        // parse JSON body -> AvionJSON
+        AvionJSON newAvion;
+        try {
+            newAvion = ctx.bodyAsClass(AvionJSON.class);
+        } catch (Exception e) {
+            ctx.status(HttpStatus.BAD_REQUEST).result("Invalid JSON body");
+            return;
+        }
+
+        // validation
+        if (newAvion == null
+                || newAvion.constructor == null || newAvion.constructor.isBlank()
+                || newAvion.ICAO == null || newAvion.ICAO.isBlank()
+                || newAvion.range <= 0
+                || newAvion.maxCapacity <= 0) {
+            ctx.status(HttpStatus.BAD_REQUEST).result("Missing/invalid fields (constructor, ICAO, range>0, maxCapacity>0)");
+            return;
+        }
+
+        // fetch data
+        List<AvionJSON> avions = readAvions(JSON_FILEPATH);
+
+        // check if the ICAO provided is UNIQUE ?
+        boolean exists = avions.stream()
+                .anyMatch(a -> a.ICAO != null && a.ICAO.equalsIgnoreCase(newAvion.ICAO));
+        if (exists) {
+            ctx.result("An airplane with this ICAO already exists")
+                    .status(HttpStatus.CONFLICT);
+            return;
+        }
+
+        // add to the list
+        List<AvionJSON> updated = new java.util.ArrayList<>(avions);
+        updated.add(newAvion);
+
+        // write the avion.json
+        try (Writer writer = new OutputStreamWriter(new FileOutputStream(JSON_FILEPATH), StandardCharsets.UTF_8)) {
+            mapper.writerWithDefaultPrettyPrinter().writeValue(writer, updated);
+        } catch (IOException e) {
+            ctx.status(HttpStatus.INTERNAL_SERVER_ERROR).result("Failed to write JSON file");
+            return;
+        }
+
+        // send the airplane added to confirm the process
+        ctx.status(HttpStatus.CREATED).json(newAvion);
+    }
 }
